<resources>
    <string name="app_name">Velfærdsteknologi</string>
    <string name="emailPage_Email">Indtast E-mail</string>
    <string name="introPage_Name">Indtast navn</string>
    <string name="introPage_job">Indtast job</string>
    <string name="introPage_Gender">Vælg køn</string>
    <string name="send_resultat">Send Resultat</string>
    <string name="de_24_sp_rgsm_l">De 24 Spørgsmål</string>
    <string name="v_lg_de_vigtigste">Vælg De Vigtigste</string>
    <string name="v_lg_de_2_vigtigste_svar">Vælg de 2 vigtigste svar</string>
    <string name="h_jeste_svar">Vælg 2 af dine stærkeste karaktertræk</string>
    <string name="laveste_svar">Svaghed</string>
    <string name="IntroPage_Title">Byg din Avatar</string>
    <string name="din_avatar">Din Avatar</string>
    <string name="v_lg_en_eksisterende">Vælg en eksisterende</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="result_page">Result Page</string>
</resources>