<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".QuestionTutorial">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="25dp">

                <TextView
                    android:id="@+id/questions_txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="Spørgsmål"
                    android:textColor="@color/designBlue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/questions_txtQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="Beskrivelse af spørgsmål"
                    android:textColor="@color/designBlue"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/questionsConfirm"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="1"
            android:orientation="horizontal"
            android:rowCount="3">

            <LinearLayout
                android:id="@+id/seekBarContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <SeekBar
                    android:id="@+id/seekBar"
                    style="@style/Widget.AppCompat.ActionBar.Solid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="4"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:progressTint="#00000000"
                    android:thumb="@drawable/ic_seek_thumb_1_23" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/seekBarTxt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:shadowColor="@color/red"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="3"
                    android:text="@string/_1"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/seekBarTxt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:shadowColor="@color/orange"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="3"
                    android:text="@string/_2"
                    android:textAlignment="center"
                    android:textColor="@color/orange"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/seekBarTxt1"
                    app:layout_constraintRight_toLeftOf="@+id/seekBarTxt3"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/seekBarTxt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:shadowColor="@color/yellow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="3"
                    android:text="@string/_3"
                    android:textAlignment="center"
                    android:textColor="@color/yellow"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/seekBarTxt2"
                    app:layout_constraintRight_toLeftOf="@+id/seekBarTxt4"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/seekBarTxt4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:shadowColor="@color/lightgreen"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="3"
                    android:text="@string/_4"
                    android:textAlignment="center"
                    android:textColor="@color/lightgreen"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/seekBarTxt3"
                    app:layout_constraintRight_toLeftOf="@+id/seekBarTxt5"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/seekBarTxt5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:shadowColor="@color/green"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="3"
                    android:text="@string/_5"
                    android:textAlignment="center"
                    android:textColor="@color/green"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/seekBarTxt4"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </GridLayout>
        <View style="@style/DividerThick" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="20dp"
            android:text="Her kan du se betydningen for, hver svarmulighed"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:rowCount="5"
            android:columnCount="2">

            <TextView
                android:layout_row="0"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:shadowColor="@color/red"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/_1"
                android:textColor="@color/red"
                android:textSize="20sp"/>

            <TextView
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ikke god"/>

            <TextView
                android:layout_row="2"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:shadowColor="@color/yellow"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/_3"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textSize="20sp"/>

            <TextView
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Middel"/>

            <TextView
                android:layout_row="4"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:shadowColor="@color/green"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/_5"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="20sp"/>

            <TextView
                android:layout_row="4"
                android:layout_column="1"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Meget god"/>
        </GridLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"

        android:gravity="center|bottom"
        android:padding="5dp"
        android:layout_margin="5dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_questionstut_back"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Tilbage"
                android:textColor="@color/designBlue"
                android:background="@color/designWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_questionstut_forward"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/designWhite"
                android:text="Videre"
                android:textColor="@color/designBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>